[gd_scene load_steps=5 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://GameField.gd" type="Script" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameField" type="Node2D" parent="."]
position = Vector2( 270, 480 )
script = ExtResource( 4 )

[node name="Walls" type="Node2D" parent="GameField"]

[node name="Wall" parent="GameField/Walls" instance=ExtResource( 1 )]
position = Vector2( -150, -3.05176e-05 )

[node name="Point" parent="GameField/Walls/Wall/PointPath/PathFollow2D" index="0"]
isCatched = true

[node name="Wall2" parent="GameField/Walls" instance=ExtResource( 1 )]
position = Vector2( 146, 0 )
rotation = 3.14159

[node name="Player" parent="GameField" instance=ExtResource( 2 )]

[node name="RotationTween" type="Tween" parent="GameField"]

[node name="RotationTimer" type="Timer" parent="GameField"]
one_shot = true

[node name="UI" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsCounter" type="Label" parent="UI"]
margin_right = 500.0
margin_bottom = 14.0
text = "Points"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="GameField/RotationTimer" to="GameField" method="start_rotation"]

[editable path="GameField/Walls/Wall"]
